# Proxy_api

./: .coveragerc  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  4.21.0  5.9.0  CONFIG_VALIDATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENTACAO_COMPLETA.md  Dockerfile  EXECUTION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MUTATION_ELIMINATION_RESULTS.md  FINAL_MUTATION_TEST_RESULTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LLM_Proxy_API.spec  MUTATION_TESTING_INTEGRATION_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PROVIDER_FORCING_GUIDE.md  Plan  QUICK_START.md  README.md  TEST_COVERAGE_ADVANCEMENT_REPORT.md  TODO.md  VALIDATION_REPORT.md  action_plan.md  basic_mutation_report.json  benchmark_connection_pooling.py  benchmark_retry_strategies.py  benchmark_throughput.py  benchmark_timeout_handling.py  build.py  build.spec  build_config.yaml  build_linux.py  build_macos.py  (+79 more)
agno-env-312/: pyvenv.cfg
config/: model_selections.json  model_selections.json.backup
context_service/: app.py  requirements.txt
docs/: ADVANCED_USAGE.md  API_REFERENCE.md  ARCHITECTURE_AND_SYSTEM_DESIGN.md  BACKGROUND_TASK_CANCELLATION.md  CACHING_GUIDE.md  CI_CD_GUIDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_API_DOCUMENTATION.md  COMPREHENSIVE_TROUBLESHOOTING_MAINTENANCE_GUIDE.md  CONFIGURATION_GUIDE.md  CONNECTION_POOLING_GUIDE.md  CORE_MODULES_DOCUMENTATION.md  FILE_REFERENCE.md  GETTING_STARTED.md  IMPLEMENTATION_CHANGES.md  INSTALLATION_GUIDE.md  INTEGRATION_GUIDE.md  LOGGING_GUIDE.md  MARKDOWN_VALIDATOR.md  QUICK_START.md  (+17 more)
(+316 files in other folders)
