[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-proxy-api"
version = "2.0.0"
description = "High-performance LLM proxy with intelligent routing and fallback"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"]
